[gd_scene load_steps=11 format=3 uid="uid://p2ptqa1u1n1k"]

[ext_resource type="Script" path="res://Client.gd" id="1_mtcsr"]
[ext_resource type="PackedScene" uid="uid://c25altqf87k2j" path="res://Lobby/FriendHBoxContainer/FriendHBoxContainer.tscn" id="2_cekro"]
[ext_resource type="PackedScene" uid="uid://bg6xgsfypi4gr" path="res://NotificationContainer/NotificationContainer.tscn" id="2_lanui"]
[ext_resource type="PackedScene" uid="uid://cvedwg86rsyp2" path="res://Lobby/UserInformationDisplay/UserInformationDisplay.tscn" id="2_qmkq0"]
[ext_resource type="PackedScene" uid="uid://dd2ekb3yor3hh" path="res://Authentication/LoginPanel/LoginPanel.tscn" id="4_4xlfs"]
[ext_resource type="PackedScene" uid="uid://xq36w5vrpfwb" path="res://Authentication/RegisterPanel/RegisterPanel.tscn" id="5_wys0s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6qptp"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.140447, 0.140447, 0.140447, 1)

[sub_resource type="Theme" id="Theme_k1pkr"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_6qptp")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tmgb8"]
content_margin_left = 7.0
content_margin_top = 7.0
content_margin_right = 7.0
content_margin_bottom = 7.0
bg_color = Color(0.315076, 0.398015, 0.42524, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u303v"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.139728, 0.149761, 0.185489, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Game" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_k1pkr")
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
script = ExtResource("1_mtcsr")
friends_packed_scene = ExtResource("2_cekro")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="LobbyContainer" type="TabContainer" parent="HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
current_tab = 0

[node name="Friend List" type="PanelContainer" parent="HBox/LobbyContainer"]
layout_mode = 2
size_flags_vertical = 0
metadata/_tab_index = 0

[node name="HBoxContainer" type="HSplitContainer" parent="HBox/LobbyContainer/Friend List"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="HBox/LobbyContainer/Friend List/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BlockFriends" type="Button" parent="HBox/LobbyContainer/Friend List/HBoxContainer/VBox"]
layout_mode = 2
size_flags_vertical = 0
text = "Block Friend"

[node name="GridContainer" type="HBoxContainer" parent="HBox/LobbyContainer/Friend List/HBoxContainer/VBox"]
layout_mode = 2
size_flags_vertical = 0

[node name="AddFriendText" type="LineEdit" parent="HBox/LobbyContainer/Friend List/HBoxContainer/VBox/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Name of friend"

[node name="AddFriend" type="Button" parent="HBox/LobbyContainer/Friend List/HBoxContainer/VBox/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Add friend"

[node name="RemoveFriend" type="Button" parent="HBox/LobbyContainer/Friend List/HBoxContainer/VBox"]
layout_mode = 2
text = "Delete friend"

[node name="GetFriends" type="Button" parent="HBox/LobbyContainer/Friend List/HBoxContainer/VBox"]
layout_mode = 2
text = "Get Friends"

[node name="FriendsBox" type="PanelContainer" parent="HBox/LobbyContainer/Friend List/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_tmgb8")

[node name="VBox" type="VBoxContainer" parent="HBox/LobbyContainer/Friend List/HBoxContainer/FriendsBox"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HBox/LobbyContainer/Friend List/HBoxContainer/FriendsBox/VBox"]
layout_mode = 2
bbcode_enabled = true
text = "[center][b]Friends"
fit_content = true

[node name="Panel" type="PanelContainer" parent="HBox/LobbyContainer/Friend List/HBoxContainer/FriendsBox/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_u303v")

[node name="FriendsContainer" type="VBoxContainer" parent="HBox/LobbyContainer/Friend List/HBoxContainer/FriendsBox/VBox/Panel"]
unique_name_in_owner = true
layout_mode = 2

[node name="Match Finder" type="PanelContainer" parent="HBox/LobbyContainer"]
visible = false
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 0
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBox/LobbyContainer/Match Finder"]
layout_mode = 2

[node name="Label" type="Label" parent="HBox/LobbyContainer/Match Finder/VBoxContainer"]
layout_mode = 2
text = "Name Of Match"

[node name="MatchName" type="LineEdit" parent="HBox/LobbyContainer/Match Finder/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="HBox/LobbyContainer/Match Finder/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="JoinCreateMatch" type="Button" parent="HBox/LobbyContainer/Match Finder/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Join/Create"

[node name="Ping" type="Button" parent="HBox/LobbyContainer/Match Finder/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ping"

[node name="Matchmaking" type="Button" parent="HBox/LobbyContainer/Match Finder/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Start Matchmaking"

[node name="Button" type="Button" parent="HBox/LobbyContainer/Match Finder/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Start Game"

[node name="Data Panel" type="PanelContainer" parent="HBox/LobbyContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBox/LobbyContainer/Data Panel"]
layout_mode = 2

[node name="StoreData" type="Button" parent="HBox/LobbyContainer/Data Panel/VBoxContainer"]
layout_mode = 2
text = "Store Data"

[node name="GetData" type="Button" parent="HBox/LobbyContainer/Data Panel/VBoxContainer"]
layout_mode = 2
text = "Get Data from Store"

[node name="ListData" type="Button" parent="HBox/LobbyContainer/Data Panel/VBoxContainer"]
layout_mode = 2
text = "List Data from Store"

[node name="Group Admin Panel" type="PanelContainer" parent="HBox/LobbyContainer"]
visible = false
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
metadata/_tab_index = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBox/LobbyContainer/Group Admin Panel"]
layout_mode = 2

[node name="GroupName2" type="LineEdit" parent="HBox/LobbyContainer/Group Admin Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Name of group"

[node name="CloseGroup" type="Button" parent="HBox/LobbyContainer/Group Admin Panel/VBoxContainer"]
layout_mode = 2
text = "Close Group"

[node name="GetGroupMemebers" type="Button" parent="HBox/LobbyContainer/Group Admin Panel/VBoxContainer"]
layout_mode = 2
text = "Get Group"

[node name="CreateGroup" type="Button" parent="HBox/LobbyContainer/Group Admin Panel/VBoxContainer"]
layout_mode = 2
text = "Create Group"

[node name="DeleteGroup" type="Button" parent="HBox/LobbyContainer/Group Admin Panel/VBoxContainer/CreateGroup"]
layout_mode = 0
offset_left = -4.0
offset_top = 41.0
offset_right = 105.0
offset_bottom = 72.0
text = "Delete Group"

[node name="Panel4" type="PanelContainer" parent="HBox/LobbyContainer/Group Admin Panel/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBox/LobbyContainer/Group Admin Panel/VBoxContainer/Panel4"]
layout_mode = 2

[node name="GroupVBox" type="VBoxContainer" parent="HBox/LobbyContainer/Group Admin Panel/VBoxContainer/Panel4/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HBox/LobbyContainer/Group Admin Panel/VBoxContainer/Panel4/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center][b]Group Memebers"

[node name="Group Manager" type="PanelContainer" parent="HBox/LobbyContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="VBoxContainer" type="GridContainer" parent="HBox/LobbyContainer/Group Manager"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="HBox/LobbyContainer/Group Manager/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name"

[node name="GroupName" type="LineEdit" parent="HBox/LobbyContainer/Group Manager/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="HBox/LobbyContainer/Group Manager/VBoxContainer"]
layout_mode = 2
text = "Description"

[node name="GroupDesc" type="LineEdit" parent="HBox/LobbyContainer/Group Manager/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="GroupQuery" type="LineEdit" parent="HBox/LobbyContainer/Group Manager/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Group Query"

[node name="CreateGroup" type="Button" parent="HBox/LobbyContainer/Group Manager/VBoxContainer"]
layout_mode = 2
text = "Create Group"

[node name="AddUserToGroup" type="Button" parent="HBox/LobbyContainer/Group Manager/VBoxContainer"]
layout_mode = 2
text = "Join Group"

[node name="AddUserToGroup2" type="Button" parent="HBox/LobbyContainer/Group Manager/VBoxContainer"]
layout_mode = 2
text = "Add User 
To Group"

[node name="List Groups" type="Button" parent="HBox/LobbyContainer/Group Manager/VBoxContainer"]
layout_mode = 2
text = "List Groups"

[node name="CheckButton" type="CheckButton" parent="HBox/LobbyContainer/Group Manager/VBoxContainer"]
layout_mode = 2
text = "Open"

[node name="Panel" type="Panel" parent="HBox/LobbyContainer/Group Manager/VBoxContainer"]
layout_mode = 2

[node name="Panel6Vbox" type="VBoxContainer" parent="HBox/LobbyContainer/Group Manager/VBoxContainer/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UserToManage" type="LineEdit" parent="HBox/LobbyContainer/Group Manager/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "User To Manage"

[node name="PromoteUser" type="Button" parent="HBox/LobbyContainer/Group Manager/VBoxContainer"]
layout_mode = 2
text = "Promote"

[node name="KickUser" type="Button" parent="HBox/LobbyContainer/Group Manager/VBoxContainer"]
layout_mode = 2
text = "Kick"

[node name="DemoteUser" type="Button" parent="HBox/LobbyContainer/Group Manager/VBoxContainer"]
layout_mode = 2
text = "Demote"

[node name="BanUser" type="Button" parent="HBox/LobbyContainer/Group Manager/VBoxContainer"]
layout_mode = 2
text = "Ban"

[node name="LeaveGroup" type="Button" parent="HBox/LobbyContainer/Group Manager/VBoxContainer"]
layout_mode = 2
text = "Leave Group"

[node name="DeleteGroup" type="Button" parent="HBox/LobbyContainer/Group Manager/VBoxContainer"]
layout_mode = 2
text = "Leave Group"

[node name="Chat" type="PanelContainer" parent="HBox/LobbyContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBox/LobbyContainer/Chat"]
layout_mode = 2

[node name="ChatName" type="LineEdit" parent="HBox/LobbyContainer/Chat/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Chat Name"

[node name="HBoxContainer" type="HBoxContainer" parent="HBox/LobbyContainer/Chat/VBoxContainer"]
layout_mode = 2

[node name="JoinGroupChatRoom" type="Button" parent="HBox/LobbyContainer/Chat/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join Group Chat"

[node name="JoinChatRoom" type="Button" parent="HBox/LobbyContainer/Chat/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join Chat"

[node name="Chat" type="PanelContainer" parent="HBox/LobbyContainer/Chat/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBox/LobbyContainer/Chat/VBoxContainer/Chat"]
layout_mode = 2

[node name="ChatTextLineEdit" type="LineEdit" parent="HBox/LobbyContainer/Chat/VBoxContainer/Chat/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Chat Text Here"

[node name="SubmitChat" type="Button" parent="HBox/LobbyContainer/Chat/VBoxContainer/Chat/VBoxContainer"]
layout_mode = 2
text = ">"

[node name="UsernameContainer" type="TabContainer" parent="HBox/LobbyContainer/Chat/VBoxContainer/Chat/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
current_tab = 0

[node name="username" type="TextEdit" parent="HBox/LobbyContainer/Chat/VBoxContainer/Chat/VBoxContainer/UsernameContainer"]
layout_mode = 2
editable = false
wrap_mode = 1
metadata/_tab_index = 0

[node name="JoinDirectChat" type="Button" parent="HBox/LobbyContainer/Chat/VBoxContainer"]
layout_mode = 2
text = "Join Direct Chat"

[node name="CreateParty" type="PanelContainer" parent="HBox/LobbyContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 6

[node name="VBoxContainer" type="VBoxContainer" parent="HBox/LobbyContainer/CreateParty"]
layout_mode = 2

[node name="CreateParty" type="Button" parent="HBox/LobbyContainer/CreateParty/VBoxContainer"]
layout_mode = 2
text = "Create Party"

[node name="Panel" type="PanelContainer" parent="HBox/LobbyContainer/CreateParty/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBox/LobbyContainer/CreateParty/VBoxContainer/Panel"]
layout_mode = 2

[node name="ChannelMessagePanel" type="PanelContainer" parent="HBox/LobbyContainer/CreateParty/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBox/LobbyContainer/CreateParty/VBoxContainer/ChannelMessagePanel"]
layout_mode = 2

[node name="ChannelMessageLabel" type="Label" parent="HBox/LobbyContainer/CreateParty/VBoxContainer/ChannelMessagePanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Join Party?"

[node name="JoinPartyNo" type="Button" parent="HBox/LobbyContainer/CreateParty/VBoxContainer/ChannelMessagePanel/VBoxContainer"]
layout_mode = 2
text = "No"

[node name="JoinPartyYes" type="Button" parent="HBox/LobbyContainer/CreateParty/VBoxContainer/ChannelMessagePanel/VBoxContainer"]
layout_mode = 2
text = "Yes"

[node name="TradeSystem" type="PanelContainer" parent="HBox/LobbyContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 7

[node name="VBoxContainer" type="VBoxContainer" parent="HBox/LobbyContainer/TradeSystem"]
layout_mode = 2

[node name="Label" type="Label" parent="HBox/LobbyContainer/TradeSystem/VBoxContainer"]
layout_mode = 2
text = "Inventory"

[node name="GridContainer" type="GridContainer" parent="HBox/LobbyContainer/TradeSystem/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="AddItemToInventory" type="Button" parent="HBox/LobbyContainer/TradeSystem/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Ping RPC"

[node name="GetInventory" type="Button" parent="HBox/LobbyContainer/TradeSystem/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Get Inventory"

[node name="SendTradeOffer" type="Button" parent="HBox/LobbyContainer/TradeSystem/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Send Trade Offer"

[node name="GetTradeOffers" type="Button" parent="HBox/LobbyContainer/TradeSystem/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Get Trade Offers"

[node name="AcceptTradeOffer2" type="Button" parent="HBox/LobbyContainer/TradeSystem/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Accept Trade Offer"

[node name="CancelTradeOffer" type="Button" parent="HBox/LobbyContainer/TradeSystem/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Cancel Trade Offer"

[node name="Panel" type="PanelContainer" parent="HBox/LobbyContainer/TradeSystem/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBox/LobbyContainer/TradeSystem/VBoxContainer/Panel"]
layout_mode = 2

[node name="Panel" type="Panel" parent="HBox/LobbyContainer/TradeSystem/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="Panel2" type="Panel" parent="HBox/LobbyContainer/TradeSystem/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="FriendNameLabel" type="Label" parent="HBox/LobbyContainer/TradeSystem/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Other User: "

[node name="Label2" type="Label" parent="HBox/LobbyContainer/TradeSystem/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "My Inventory"

[node name="TradeVbox1" type="VBoxContainer" parent="HBox/LobbyContainer/TradeSystem/VBoxContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TradeVBox2" type="VBoxContainer" parent="HBox/LobbyContainer/TradeSystem/VBoxContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TradeOffers" type="PanelContainer" parent="HBox/LobbyContainer/TradeSystem/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBox/LobbyContainer/TradeSystem/VBoxContainer/TradeOffers"]
layout_mode = 2

[node name="Label" type="Label" parent="HBox/LobbyContainer/TradeSystem/VBoxContainer/TradeOffers/VBoxContainer2"]
layout_mode = 2
text = "Trade Offers"

[node name="VBoxContainer" type="VBoxContainer" parent="HBox/LobbyContainer/TradeSystem/VBoxContainer/TradeOffers/VBoxContainer2"]
layout_mode = 2

[node name="UserInformationDisplay" parent="HBox" instance=ExtResource("2_qmkq0")]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 105)
layout_mode = 2
size_flags_vertical = 1

[node name="Authentication" type="CenterContainer" parent="."]
visible = false
layout_mode = 2

[node name="Tabs" type="TabContainer" parent="Authentication"]
layout_mode = 2
current_tab = 0

[node name="Login" parent="Authentication/Tabs" instance=ExtResource("4_4xlfs")]
layout_mode = 2
metadata/_tab_index = 0

[node name="Register" parent="Authentication/Tabs" instance=ExtResource("5_wys0s")]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="NotificationContainer" parent="." instance=ExtResource("2_lanui")]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 8

[connection signal="button_down" from="HBox/LobbyContainer/Friend List/HBoxContainer/VBox/BlockFriends" to="." method="_on_block_friends_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Friend List/HBoxContainer/VBox/GridContainer/AddFriend" to="." method="_on_add_friend_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Friend List/HBoxContainer/VBox/RemoveFriend" to="." method="_on_remove_friend_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Friend List/HBoxContainer/VBox/GetFriends" to="." method="_on_get_friends_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Match Finder/VBoxContainer/GridContainer/JoinCreateMatch" to="." method="_on_join_create_match_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Match Finder/VBoxContainer/GridContainer/Ping" to="." method="_on_ping_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Match Finder/VBoxContainer/GridContainer/Matchmaking" to="." method="_on_matchmaking_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Match Finder/VBoxContainer/GridContainer/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Data Panel/VBoxContainer/StoreData" to="." method="_on_store_data_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Data Panel/VBoxContainer/GetData" to="." method="_on_get_data_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Data Panel/VBoxContainer/ListData" to="." method="_on_list_data_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Group Admin Panel/VBoxContainer/GetGroupMemebers" to="." method="_on_get_group_memebers_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Group Admin Panel/VBoxContainer/CreateGroup" to="." method="_on_create_group_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Group Manager/VBoxContainer/CreateGroup" to="." method="_on_create_group_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Group Manager/VBoxContainer/AddUserToGroup" to="." method="_on_add_user_to_group_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Group Manager/VBoxContainer/AddUserToGroup2" to="." method="_on_add_user_to_group_2_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Group Manager/VBoxContainer/List Groups" to="." method="_on_list_groups_button_down"]
[connection signal="toggled" from="HBox/LobbyContainer/Group Manager/VBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="button_down" from="HBox/LobbyContainer/Group Manager/VBoxContainer/PromoteUser" to="." method="_on_promote_user_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Group Manager/VBoxContainer/KickUser" to="." method="_on_kick_user_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Group Manager/VBoxContainer/DemoteUser" to="." method="_on_demote_user_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Group Manager/VBoxContainer/LeaveGroup" to="." method="_on_leave_group_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Group Manager/VBoxContainer/DeleteGroup" to="." method="_on_delete_group_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Chat/VBoxContainer/HBoxContainer/JoinGroupChatRoom" to="." method="_on_join_group_chat_room_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Chat/VBoxContainer/HBoxContainer/JoinChatRoom" to="." method="_on_join_chat_room_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Chat/VBoxContainer/Chat/VBoxContainer/SubmitChat" to="." method="_on_submit_chat_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/Chat/VBoxContainer/JoinDirectChat" to="." method="_on_join_direct_chat_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/CreateParty/VBoxContainer/CreateParty" to="." method="_on_create_party_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/CreateParty/VBoxContainer/ChannelMessagePanel/VBoxContainer/JoinPartyNo" to="." method="_on_join_party_no_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/CreateParty/VBoxContainer/ChannelMessagePanel/VBoxContainer/JoinPartyYes" to="." method="_on_join_party_yes_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/TradeSystem/VBoxContainer/GridContainer/AddItemToInventory" to="." method="_on_ping_rpc_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/TradeSystem/VBoxContainer/GridContainer/GetInventory" to="." method="_on_get_inventory_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/TradeSystem/VBoxContainer/GridContainer/SendTradeOffer" to="." method="_on_send_trade_offer_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/TradeSystem/VBoxContainer/GridContainer/GetTradeOffers" to="." method="_on_get_trade_offers_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/TradeSystem/VBoxContainer/GridContainer/AcceptTradeOffer2" to="." method="_on_accept_trade_offer_button_down"]
[connection signal="button_down" from="HBox/LobbyContainer/TradeSystem/VBoxContainer/GridContainer/CancelTradeOffer" to="." method="_on_cancel_trade_offer_button_down"]
[connection signal="login" from="Authentication/Tabs/Login" to="." method="_on_login_pressed"]
[connection signal="register_account" from="Authentication/Tabs/Register" to="." method="_on_register_account_pressed"]
